adições no codigo

--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+    </style>
 </head>
-<body>
-    
+
+<body class="mainBg">
+    <aside class="menu">
+        <section class="mainContent menuContent">
+            <h1><a href="">LOGO</a></h1>
+            <nav>
+                <ul>
+                    <li><a href="">About me</a></li>
+                    <li><a href="">Work</a></li>
+                    <li><a href="">Study</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Bonus</a></li>
+                </ul>
+            </nav>
+        </section>
+    </aside>
+    <section class="section whiteBg"></section>
+    <section class="section mainBg"></section>
 </body>
+
 </html>
