commit initial day 03/01

--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
     <link rel="stylesheet" href="/assets/css/variables.css">
     <link rel="stylesheet" href="/assets/css/elements.css">
     <link rel="stylesheet" href="/assets/css/classes.css">
+    <link rel="stylesheet" href="/assets/css/menu.css">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-    </style>
 </head>
 
-<body class="mainBg">
+<body>
     <aside class="menu">
-        <section class="mainContent menuContent">
-            <h1><a href="">LOGO</a></h1>
+        <div class="mainContent menuContent">
+            <h1><a href="">Matheus Henrique 👨🏻‍💻</a></h1>
             <nav>
                 <ul>
                     <li><a href="">About me</a></li>
@@ -27,10 +25,37 @@
                     <li><a href="">Bonus</a></li>
                 </ul>
             </nav>
-        </section>
+        </div>
     </aside>
-    <section class="section whiteBg"></section>
-    <section class="section mainBg"></section>
+    <div class="menuSpacing"></div>
+    <section class="aboutMe whiteBg section">
+        <div class="aboutMeText">
+            <h2>About me</h2>
+            <p>Hello! I'm Matheus Henrique, a student in Systems Analysis and Development. Currently, I'm working as an
+                Intern at Kyros company, where I'm involved in software development.</p>
+            <p>Since early age, I discovered my passion for solving problems through technology, and ever since, I've
+                been dedicated to learning and improving my skills. I'm enthusiastic about Java, SQL, and Git, and I'm
+                constantly expanding my knowledge in these areas.</p>
+            <p>Additionally, I'm enhancing my skills in web development, and I'm always exploring new technologies and
+                frameworks to broaden my skill set.</p>
+            <h2>Skills</h2>
+            <img src="/assets/img/github.png" alt="GitHub">
+            <img src="/assets/img/sql.png" alt="SQL">
+            <img src="/assets/img/database-restore.png" alt="Banco de Dados">
+            <img src="/assets/img/java-coffee-cup-logo--v1.png" alt="Java">
+            <img src="/assets/img/spring-logo.png" alt="Spring Boot">
+            <img src="/assets/img/html-5--v1.png" alt="HTML5">
+            <img src="/assets/img/css3.png" alt="CSS3">
+            <img src="/assets/img/javascript--v1.png" alt="JavaScript">
+            <img src="/assets/img/linux--v1.png" alt="Linux">
+        </div>
+        <div class="aboutMeImg">
+
+        </div>
+    </section>
+    <section class="mainBg section">
+
+    </section>
 </body>
 
 </html>
