--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/assets/css/elements.css">
     <link rel="stylesheet" href="/assets/css/classes.css">
     <link rel="stylesheet" href="/assets/css/menu.css">
+    <link rel="stylesheet" href="/assets/css/aboutMe.css">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -18,43 +19,60 @@
             <h1><a href="">Matheus Henrique 👨🏻‍💻</a></h1>
             <nav>
                 <ul>
-                    <li><a href="">About me</a></li>
-                    <li><a href="">Work</a></li>
-                    <li><a href="">Study</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Bonus</a></li>
+                    <li><a href="#aboutMe">About me</a></li>
+                    <li><a href="#work">Work</a></li>
+                    <li><a href="#study">Study</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#bonus">Bonus</a></li>
                 </ul>
             </nav>
         </div>
     </aside>
     <div class="menuSpacing"></div>
-    <section class="aboutMe whiteBg section">
-        <div class="aboutMeText">
-            <h2>About me</h2>
-            <p>Hello! I'm Matheus Henrique, a student in Systems Analysis and Development. Currently, I'm working as an
-                Intern at Kyros company, where I'm involved in software development.</p>
-            <p>Since early age, I discovered my passion for solving problems through technology, and ever since, I've
-                been dedicated to learning and improving my skills. I'm enthusiastic about Java, SQL, and Git, and I'm
-                constantly expanding my knowledge in these areas.</p>
-            <p>Additionally, I'm enhancing my skills in web development, and I'm always exploring new technologies and
-                frameworks to broaden my skill set.</p>
-            <h2>Skills</h2>
-            <img src="/assets/img/github.png" alt="GitHub">
-            <img src="/assets/img/sql.png" alt="SQL">
-            <img src="/assets/img/database-restore.png" alt="Banco de Dados">
-            <img src="/assets/img/java-coffee-cup-logo--v1.png" alt="Java">
-            <img src="/assets/img/spring-logo.png" alt="Spring Boot">
-            <img src="/assets/img/html-5--v1.png" alt="HTML5">
-            <img src="/assets/img/css3.png" alt="CSS3">
-            <img src="/assets/img/javascript--v1.png" alt="JavaScript">
-            <img src="/assets/img/linux--v1.png" alt="Linux">
-        </div>
-        <div class="aboutMeImg">
-
+    <section id="aboutMe" class="aboutMe blueBg section">
+        <div class="mainContent aboutMeContent">
+            <div class="aboutMeText">
+                <h2>About me</h2>
+                <p>Hello! I'm Matheus Henrique, a student in Systems Analysis and Development. Currently, I'm working as
+                    an
+                    Intern at Kyros company, where I'm involved in software development.</p>
+                <p>Since early age, I discovered my passion for solving problems through technology, and ever since,
+                    I've
+                    been dedicated to learning and improving my skills. I'm enthusiastic about Java, SQL, and Git, and
+                    I'm
+                    constantly expanding my knowledge in these areas.</p>
+                <p>Additionally, I'm enhancing my skills in web development, and I'm always exploring new technologies
+                    and
+                    frameworks to broaden my skill set.</p>
+                <h2>Skills</h2>
+                <p>
+                    <img src="/assets/img/github.png" alt="GitHub">
+                    <img src="/assets/img/sql.png" alt="SQL">
+                    <img src="/assets/img/database-restore.png" alt="Banco de Dados">
+                    <img src="/assets/img/java-coffee-cup-logo--v1.png" alt="Java">
+                    <img src="/assets/img/spring-logo.png" alt="Spring Boot">
+                    <img src="/assets/img/html-5--v1.png" alt="HTML5">
+                    <img src="/assets/img/css3.png" alt="CSS3">
+                    <img src="/assets/img/javascript--v1.png" alt="JavaScript">
+                    <img src="/assets/img/linux--v1.png" alt="Linux">
+                </p>
+            </div>
+            <div class="aboutMeImg">
+                <p><img src="/assets/img/javaCssHtml.svg" alt="Homem segurando a logo do front end, javaScript Css e Html"></p>
+            </div>
         </div>
     </section>
-    <section class="mainBg section">
+    <section id="work" class="whiteBg section">
 
+    </section>
+    <section id="study" class="blueBg section">
+
+    </section>
+    <section id="contact" class="whiteBg section">
+        
+    </section>
+    <section id="bonus" class="blueBg section">
+        
     </section>
 </body>
 
