--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="/assets/css/classes.css">
     <link rel="stylesheet" href="/assets/css/menu.css">
     <link rel="stylesheet" href="/assets/css/aboutMe.css">
+    <link rel="stylesheet" href="/assets/css/work.css">
+    <link rel="stylesheet" href="/assets/css/top3.css">
+    <link rel="stylesheet" href="/assets/css/study.css">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -21,6 +24,7 @@
                 <ul>
                     <li><a href="#aboutMe">About me</a></li>
                     <li><a href="#work">Work</a></li>
+                    <li><a href="#top3">Top 3 Works</a></li>
                     <li><a href="#study">Study</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="#bonus">Bonus</a></li>
@@ -58,21 +62,95 @@
                 </p>
             </div>
             <div class="aboutMeImg">
-                <p><img src="/assets/img/javaCssHtml.svg" alt="Homem segurando a logo do front end, javaScript Css e Html"></p>
+                <p><img src="/assets/img/javaCssHtml.svg"
+                        alt="Homem segurando a logo do front end, javaScript Css e Html"></p>
             </div>
         </div>
     </section>
     <section id="work" class="whiteBg section">
+        <div class="mainContent workContent">
+            <div class="workText">
+                <h2>Work Experience</h2>
+                <p>
+                    Throughout my career, I've had the opportunity to work on various challenging projects. <br> <br>I
+                    highlight
+                    my experience with Java and Spring Boot, where I developed efficient and scalable applications. <br>
+                    <br>
+                    I've
+                    also been involved in web development projects, using JavaScript, HTML, CSS, and React to create
+                    responsive interfaces and frontend logic. <br> <br>
+                    Additionally, I've gained skills in database management,
+                    ensuring data integrity and reliability. <br> <br>
+                    In addition to the mentioned projects, I have experience in Linux environments. I also have
+                    knowledge in Python and C, acquired during my studies in Systems Analysis and Development. <br> <br>
+                    I'm always seeking continuous learning and exploring new technologies to enhance my skills and stay
+                    updated.</p>
+            </div>
+            <div class="workImg">
+                <img src="/assets/img/spring-boot-svgrepo.svg" alt="Logo do Spring Svg">
+                <img src="/assets/img/java-logo-svgrepo.svg" alt="Logo do java Svg">
+                <img src="/assets/img/database-svgrepo.svg" alt="Logo do Banco de dados Svg">
+                <img src="/assets/img/react-svgreposvg.svg" alt="Logo do React Svg">
+            </div>
+        </div>
+    </section>
+    <section id="top3" class="blueBg section">
+        <div class="mainContent gridOneContent">
+            <h2 class="gridMainHeading">Top 3 works</h2>
+            <p class="gridDescription">I'll be listing the top 3 works I do the most:</p>
+
+            <div class="grid">
+                <article>
+                    <h3>Java with SpringBoot</h3>
+                    <p>As part of my work experience, I have extensively utilized Java Spring Boot framework to develop
+                        robust
+                        and scalable applications. Leveraging the power of Spring Boot, I have contributed to the
+                        development of
+                        efficient backend systems, ensuring smooth functionality and high performance.
+                    </p>
+                </article>
+                <article>
+                    <h3>Web Development (JavaScript, HTML, CSS, React)</h3>
+                    <p>I have been involved in various web development projects where I utilized a combination of
+                        JavaScript,
+                        HTML, CSS, and React. From crafting responsive and visually appealing user interfaces to
+                        implementing
+                        complex frontend logic, I have demonstrated proficiency in full-stack web development, ensuring
+                        seamless
+                        user experiences.
+                    </p>
+                </article>
+                <article>
+                    <h3>Database</h3>
+                    <p>Database management is a crucial aspect of modern application development, and I have hands-on
+                        experience
+                        working with various database systems. From designing efficient database schemas to optimizing
+                        query
+                        performance, I have played a key role in ensuring data integrity and reliability for our
+                        applications.
+                    </p>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section id="study" class="whiteBg section">
+        <div class="mainContent studyContent">
+            <div class="studyText">
+                <h2>Faculty</h2>
+                <p>Analysis and systems development</p>
+                <h2>Courses</h2>
+                <p></p>
+            </div>
+            <div class="studyImg">
+
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="blueBg section">
 
     </section>
-    <section id="study" class="blueBg section">
+    <section id="bonus" class="whiteBg section">
 
-    </section>
-    <section id="contact" class="whiteBg section">
-        
-    </section>
-    <section id="bonus" class="blueBg section">
-        
     </section>
 </body>
 
