section study concluida

--- a/index.html
+++ b/index.html
@@ -82,9 +82,12 @@
                     Additionally, I've gained skills in database management,
                     ensuring data integrity and reliability. <br> <br>
                     In addition to the mentioned projects, I have experience in Linux environments. I also have
-                    knowledge in Python and C, acquired during my studies in Systems Analysis and Development. <br> <br>
+                    knowledge in Python and C, acquired during my studies in Systems Analysis and Development. I also
+                    learned about computer networks and have a little knowledge of artificial intelligence with Azure
+                    Microsoft. <br> <br>
                     I'm always seeking continuous learning and exploring new technologies to enhance my skills and stay
-                    updated.</p>
+                    updated.
+                </p>
             </div>
             <div class="workImg">
                 <img src="/assets/img/spring-boot-svgrepo.svg" alt="Logo do Spring Svg">
@@ -94,7 +97,7 @@
             </div>
         </div>
     </section>
-    <section id="top3" class="blueBg section">
+    <section id="top3" class="whiteBg section">
         <div class="mainContent gridOneContent">
             <h2 class="gridMainHeading">Top 3 works</h2>
             <p class="gridDescription">I'll be listing the top 3 works I do the most:</p>
@@ -134,15 +137,35 @@
         </div>
     </section>
     <section id="study" class="whiteBg section">
-        <div class="mainContent studyContent">
-            <div class="studyText">
-                <h2>Faculty</h2>
-                <p>Analysis and systems development</p>
-                <h2>Courses</h2>
-                <p></p>
-            </div>
-            <div class="studyImg">
-
+        <div class="mainContent gridOneContentStudy">
+            <h2 class="gridMainHeadingStudy">Faculty</h2>
+            <p class="gridDescriptionStudy">Analysis and Systems Development</p>
+            <h2>Courses</h2>
+            <div class="gridStudy">
+                <div>
+                    <a href="https://hermes.dio.me/certificates/8GCOKUNU.pdf" target="_blank">
+                        <img src="/assets/img/certificadoAzureDio.jpg" alt="certificado Azure Dio">
+                    </a>
+                </div>
+                <div>
+                    <img src="/assets/img/certificadoLogicaProgUdemy.jpg" alt="certificado Logica Prog Udemy">
+                </div>
+                <div>
+                    <img src="/assets/img/certificadoRedesCursoEmVideo.jpg" alt="certificado Redes Curso Em Video">
+                </div>
+                <div>
+                    <a href="https://hermes.dio.me/certificates/75E34FAF.pdf" target="_blank">
+                        <img src="/assets/img/certificadoLinuxDio.jpg" alt="certificado Linux Dio">
+                    </a>
+                </div>
+                <div>
+                    <img src="/assets/img/certificadoInformaticaProgBasicAvancUdemy.jpg"
+                        alt="certificado Informatica Prog Basic Avanc Udemy">
+                </div>
+                <div>
+                    <img src="/assets/img/certificadoLogicaProgCursoEmVideo.jpg"
+                        alt="certificado Logica Prog Curso Em Video">
+                </div>
             </div>
         </div>
     </section>
