--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/assets/css/work.css">
     <link rel="stylesheet" href="/assets/css/top3.css">
     <link rel="stylesheet" href="/assets/css/study.css">
+    <link rel="stylesheet" href="/assets/css/contactMe.css">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -170,6 +171,48 @@
         </div>
     </section>
     <section id="contact" class="blueBg section">
+        <div class="mainContent contactMeContent">
+            <div class="contactMeText">
+                <h2>Social media</h2>
+                <p>
+                    <a href="https://github.com/mat-henriqu" target="_blank"><img src="/assets/img/github.png"
+                            alt="GitHub"></a>
+                    <a href="https://www.linkedin.com/in/mat-henriqu/" target="_blank"><img
+                            src="/assets/img/linkedin.png" alt=""></a>
+                    <a href="https://www.instagram.com/mat_henriqu/" target="_blank"><img
+                            src="/assets/img/instagram.png" alt=""></a>
+                    <a href="https://www.dio.me/users/mat_henriqu" target="_blank"><img src="/assets/img/dio.svg"
+                            alt=""></a>
+                    <a href="https://wa.me/+5534997638331" target="_blank"><img src="/assets/img/whatsapp.png"
+                            alt=""></a>
+                </p>
+            </div>
+            <div class="contactMeImg">
+                <p><img src="/assets/img/conectingTeams.svg"
+                        alt="Homem segurando a logo do front end, javaScript Css e Html"></p>
+            </div>
+            <div class="contactForm">
+                <fieldset>
+                    <legend>Contact Me</legend>
+                    <div class="formGrup">
+                        <label for="firstName">First Name</label>
+                        <input type="text" name="firstName" id="firstName">
+                    </div>
+                    <div class="formGrup">
+                        <label for="lastName">Last Name</label>
+                        <input type="text" name="lastName" id="lastName">
+                    </div>
+                    <div class="formGrup">
+                        <label for="email">Email</label>
+                        <input type="text" name="email" id="email">
+                    </div>
+                    <div class="formGrup">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
 
     </section>
     <section id="bonus" class="whiteBg section">
