--- a/index.html
+++ b/index.html
@@ -188,35 +188,33 @@
                 </p>
             </div>
             <div class="contactMeImg">
-                <p><img src="/assets/img/conectingTeams.svg"
-                        alt="Homem segurando a logo do front end, javaScript Css e Html"></p>
+                <p><img src="/assets/img/contactMePage.svg" alt="Logo que indica algo se conectando"></p>
             </div>
             <div class="contactForm">
-                <fieldset>
+                <fieldset class="formGrid">
                     <legend>Contact Me</legend>
-                    <div class="formGrup">
+                    <div class="formGroup">
                         <label for="firstName">First Name</label>
-                        <input type="text" name="firstName" id="firstName">
+                        <input type="text" name="firstName" id="firstName" placeholder="Your first Name">
                     </div>
-                    <div class="formGrup">
+                    <div class="formGroup">
                         <label for="lastName">Last Name</label>
-                        <input type="text" name="lastName" id="lastName">
+                        <input type="text" name="lastName" id="lastName" placeholder="Your last Name">
                     </div>
-                    <div class="formGrup">
+                    <div class="formGroup">
                         <label for="email">Email</label>
-                        <input type="text" name="email" id="email">
+                        <input type="text" name="email" id="email" placeholder="Your email">
                     </div>
-                    <div class="formGrup">
+                    <div class="formGroup fullWidth">
                         <label for="message">Message</label>
-                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                        <textarea name="message" id="message" placeholder="Your message" cols="30" rows="10"></textarea>
+                    </div>
+                    <div class="formGroup fullWidth">
+                        <button type="submit">Send Message</button>
                     </div>
                 </fieldset>
             </div>
         </div>
-
-    </section>
-    <section id="bonus" class="whiteBg section">
-
     </section>
 </body>
 
