--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Matheus Henrique 👨🏻‍💻</title>
     <link rel="stylesheet" href="/assets/css/variables.css">
     <link rel="stylesheet" href="/assets/css/elements.css">
     <link rel="stylesheet" href="/assets/css/classes.css">
@@ -28,7 +28,6 @@
                     <li><a href="#top3">Top 3 Works</a></li>
                     <li><a href="#study">Study</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="#bonus">Bonus</a></li>
                 </ul>
             </nav>
         </div>
