--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matheus Henrique 👨🏻‍💻</title>
-    <link rel="shortcut icon" href="/assets/img/certificadoAzureDio.jpg" type="image/x-icon">
+    <link rel="icon" href="/assets/img/favicon.png" />
     <link rel="stylesheet" href="/assets/css/variables.css">
     <link rel="stylesheet" href="/assets/css/elements.css">
     <link rel="stylesheet" href="/assets/css/classes.css">
