adição do certificadoJavaAiPowerEdDIO

--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
                     <img src="/assets/img/certificadoLogicaProgCursoEmVideo.jpg"
                         alt="certificado Logica Prog Curso Em Video">
                 </div>
+                <div>
+                    <a href="https://hermes.dio.me/certificates/5DQSNIYD.pdf" target="_blank">
+                        <img src="/assets/img/certificadoJavaAiPowerEdDIO.jpg" alt="certificado Java Ai PowerEd DIO">
+                    </a>
+                </div>
             </div>
         </div>
     </section>
