--- a/index.html
+++ b/index.html
@@ -172,6 +172,11 @@
                         <img src="/assets/img/certificadoJavaAiPowerEdDIO.jpg" alt="certificado Java Ai PowerEd DIO">
                     </a>
                 </div>
+                <div>
+                    <a href="https://www.udemy.com/certificate/UC-3062d483-cdad-46c1-b768-291b04e9bcb7/" target="_blank">
+                        <img src="/assets/img/certificadoHtmlCssOInicioUdemy.jpg" alt="certificado Html Css O Inicio Udemy">
+                    </a>
+                </div>
             </div>
         </div>
     </section>
