Adição de Projects

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="/assets/css/study.css">
     <link rel="stylesheet" href="/assets/css/contactMe.css">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/projects.css">
+
 </head>
 
 <body>
@@ -28,6 +30,7 @@
                     <li><a href="#work">Work</a></li>
                     <li><a href="#top3">Top 3 Works</a></li>
                     <li><a href="#study">Study</a></li>
+                    <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -99,7 +102,7 @@
         </div>
     </section>
     <section id="top3" class="whiteBg section">
-        <div class="mainContent gridOneContent">
+        <div class=" gridOneContent">
             <h2 class="gridMainHeading">Top 3 works</h2>
             <p class="gridDescription">I'll be listing the top 3 works I do the most:</p>
 
@@ -173,9 +176,58 @@
                     </a>
                 </div>
                 <div>
-                    <a href="https://www.udemy.com/certificate/UC-3062d483-cdad-46c1-b768-291b04e9bcb7/" target="_blank">
-                        <img src="/assets/img/certificadoHtmlCssOInicioUdemy.jpg" alt="certificado Html Css O Inicio Udemy">
+                    <a href="https://www.udemy.com/certificate/UC-3062d483-cdad-46c1-b768-291b04e9bcb7/"
+                        target="_blank">
+                        <img src="/assets/img/certificadoHtmlCssOInicioUdemy.jpg"
+                            alt="certificado Html Css O Inicio Udemy">
                     </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="projects" class="whiteBg section">
+        <div class="mainContent gridOneContentProjects">
+            <h2 class="gridMainHeadingProjects">Projects</h2>
+            <p class="gridDescriptionProjects">Projects Web</p>
+            <div class="gridProjects">
+                <div>
+                    <figure>
+                        <a href="./Doceria Landing Page/index.html" target="_blank">
+                            <img src="/assets/img/doceria.png" alt="Pagina de Doceria">
+                        </a>
+                        <figcaption>Bakery Page - Developed using HTML and CSS.</figcaption>
+                    </figure>
+                </div>
+                <div>
+                    <figure>
+                        <a href="./Pagina de Agencia/index.html" target="_blank">
+                            <img src="/assets/img/agencia.png" alt="Pagina de Agencia">
+                        </a>
+                        <figcaption>Agency Page - Developed using HTML and CSS.</figcaption>
+                    </figure>
+                </div>
+                <div>
+                    <figure>
+                        <a href="./Pagina de contato/index.html" target="_blank">
+                            <img src="/assets/img/contato.png" alt="Pagina de Contato">
+                        </a>
+                        <figcaption>Contact Page - Developed using HTML and CSS.</figcaption>
+                    </figure>
+                </div>
+                <div>
+
+                </div>
+                <div>
+
+                </div>
+                <div>
+   
+                </div>
+                <div>
+
+                </div>
+                <div>
+
                 </div>
             </div>
         </div>
