--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
         <div class="mainContent gridOneContentProjects">
             <h2 class="gridMainHeadingProjects">Projects</h2>
             <p class="gridDescriptionProjects">Projects Web</p>
+            <h2>Developed using HTML and CSS.</h2>
             <div class="gridProjects">
                 <div>
                     <figure>
