--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
     <section id="projects" class="whiteBg section">
         <div class="mainContent gridOneContentProjects">
             <h2 class="gridMainHeadingProjects">Projects</h2>
-            <p class="gridDescriptionProjects">Projects Web</p>
-            <h2>Developed using HTML and CSS.</h2>
+            <h2 class="gridDescriptionProjects">Projects Web</h2>
+            <p>Developed using HTML and CSS.</p>
             <div class="gridProjects">
                 <div>
                     <figure>
