Projeto login e registro

--- a/index.html
+++ b/index.html
@@ -227,7 +227,12 @@
                     </figure>
                 </div>
                 <div>
-
+                    <figure>
+                        <a href="./Login/login.html" target="_blank">
+                            <img src="/assets/img/logineregistro.png" alt="IMG Random">
+                        </a>
+                        <figcaption>Login and Register - Developed using HTML, CSS and BootStrap.</figcaption>
+                    </figure>
                 </div>
                 <div>
 
