melhorias em css

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="menuSpacing"></div>
     <section id="aboutMe" class="aboutMe blueBg section">
         <div class="mainContent aboutMeContent">
-            <div class="aboutMeText">
+            <div class="aboutMeText" id="text">
                 <h2>About me</h2>
                 <p>Hello! I'm Matheus Henrique, a student in Systems Analysis and Development. Currently, I'm working as
                     an
@@ -94,10 +94,10 @@
                 </p>
             </div>
             <div class="workImg">
-                <img src="/assets/img/spring-boot-svgrepo.svg" alt="Logo do Spring Svg">
-                <img src="/assets/img/java-logo-svgrepo.svg" alt="Logo do java Svg">
-                <img src="/assets/img/database-svgrepo.svg" alt="Logo do Banco de dados Svg">
-                <img src="/assets/img/react-svgreposvg.svg" alt="Logo do React Svg">
+                <img src="/assets/img/spring-boot-svgrepo.svg" alt="Logo do Spring Svg" class="pulse">
+                <img src="/assets/img/java-logo-svgrepo.svg" alt="Logo do java Svg" class="pulse">
+                <img src="/assets/img/database-svgrepo.svg" alt="Logo do Banco de dados Svg" class="imgbanco">
+                <img src="/assets/img/react-svgreposvg.svg" alt="Logo do React Svg" class="imgreact">
             </div>
         </div>
     </section>
