Pagina de relogio

--- a/index.html
+++ b/index.html
@@ -235,7 +235,12 @@
                     </figure>
                 </div>
                 <div>
-
+                    <figure>
+                        <a href="./Time Loft/index.html" target="_blank">
+                            <img src="/assets/img/timeloft.png" alt="Time Loft">
+                        </a>
+                        <figcaption>Watch sales page - Developed using HTML, CSS and BootStrap.</figcaption>
+                    </figure>
                 </div>
                 <div>
 
