--- a/index.html
+++ b/index.html
@@ -145,22 +145,10 @@
             <h2 class="gridMainHeadingStudy">Faculty</h2>
             <p class="gridDescriptionStudy">Analysis and Systems Development</p>
             <h2>Courses</h2>
+            <p>Logic Programming</p>
             <div class="gridStudy">
                 <div>
-                    <a href="https://hermes.dio.me/certificates/8GCOKUNU.pdf" target="_blank">
-                        <img src="/assets/img/certificadoAzureDio.jpg" alt="certificado Azure Dio">
-                    </a>
-                </div>
-                <div>
                     <img src="/assets/img/certificadoLogicaProgUdemy.jpg" alt="certificado Logica Prog Udemy">
-                </div>
-                <div>
-                    <img src="/assets/img/certificadoRedesCursoEmVideo.jpg" alt="certificado Redes Curso Em Video">
-                </div>
-                <div>
-                    <a href="https://hermes.dio.me/certificates/75E34FAF.pdf" target="_blank">
-                        <img src="/assets/img/certificadoLinuxDio.jpg" alt="certificado Linux Dio">
-                    </a>
                 </div>
                 <div>
                     <img src="/assets/img/certificadoInformaticaProgBasicAvancUdemy.jpg"
@@ -170,16 +158,49 @@
                     <img src="/assets/img/certificadoLogicaProgCursoEmVideo.jpg"
                         alt="certificado Logica Prog Curso Em Video">
                 </div>
+            </div>
+            <p>Front End courses</p>
+            <div class="gridStudy">
+                <div>
+                    <a href="https://www.udemy.com/certificate/UC-3062d483-cdad-46c1-b768-291b04e9bcb7/"
+                        target="_blank">
+                        <img src="/assets/img/certificadoHtmlCssOInicioUdemy.jpg"
+                            alt="certificado Html Css O Inicio Udemy">
+                    </a>
+                </div>
+                <div>
+                    <a href="https://www.udemy.com/certificate/UC-5641f70b-0ef2-42ee-a855-21dad6d9e6c9/"
+                        target="_blank">
+                        <img src="/assets/img/certificadoHtmlCssMedioUdemy.jpg"
+                            alt="certificado Html Css Medio Udemy">
+                    </a>
+                </div>
+                <div>
+                    <a href="https://www.udemy.com/certificate/UC-4f49e190-46c6-479e-b6da-c7f78d06712d/"
+                        target="_blank">
+                        <img src="/assets/img/certificadoBootstrapUdemy.jpg"
+                            alt="certificado Html Css Medio Udemy">
+                    </a>
+                </div>
+            </div>
+
+            <div class="gridStudy">
+                <div>
+                    <img src="/assets/img/certificadoRedesCursoEmVideo.jpg" alt="certificado Redes Curso Em Video">
+                </div>
+                <div>
+                    <a href="https://hermes.dio.me/certificates/75E34FAF.pdf" target="_blank">
+                        <img src="/assets/img/certificadoLinuxDio.jpg" alt="certificado Linux Dio">
+                    </a>
+                </div>
                 <div>
                     <a href="https://hermes.dio.me/certificates/5DQSNIYD.pdf" target="_blank">
                         <img src="/assets/img/certificadoJavaAiPowerEdDIO.jpg" alt="certificado Java Ai PowerEd DIO">
                     </a>
                 </div>
                 <div>
-                    <a href="https://www.udemy.com/certificate/UC-3062d483-cdad-46c1-b768-291b04e9bcb7/"
-                        target="_blank">
-                        <img src="/assets/img/certificadoHtmlCssOInicioUdemy.jpg"
-                            alt="certificado Html Css O Inicio Udemy">
+                    <a href="https://hermes.dio.me/certificates/8GCOKUNU.pdf" target="_blank">
+                        <img src="/assets/img/certificadoAzureDio.jpg" alt="certificado Azure Dio">
                     </a>
                 </div>
             </div>
