alterações no study

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <h2 class="gridMainHeadingStudy">Faculty</h2>
             <p class="gridDescriptionStudy">Analysis and Systems Development</p>
             <h2>Courses</h2>
-            <p>Logic Programming</p>
+            <p class="gridTitleStudy">Logic Programming</p>
             <div class="gridStudy">
                 <div>
                     <img src="/assets/img/certificadoLogicaProgUdemy.jpg" alt="certificado Logica Prog Udemy">
@@ -159,7 +159,7 @@
                         alt="certificado Logica Prog Curso Em Video">
                 </div>
             </div>
-            <p>Front End courses</p>
+            <p class="gridTitleStudy">Html e Css</p>
             <div class="gridStudy">
                 <div>
                     <a href="https://www.udemy.com/certificate/UC-3062d483-cdad-46c1-b768-291b04e9bcb7/"
@@ -176,18 +176,31 @@
                     </a>
                 </div>
                 <div>
+                    <a href="https://hermes.dio.me/certificates/XROTAIJC.pdf"
+                        target="_blank">
+                        <img src="/assets/img/certificadoFormacaoHtmlDeveloperDIO.png"
+                            alt="certificado Formacao Html Developer DIO">
+                    </a>
+                </div>
+                <div>
                     <a href="https://www.udemy.com/certificate/UC-4f49e190-46c6-479e-b6da-c7f78d06712d/"
                         target="_blank">
                         <img src="/assets/img/certificadoBootstrapUdemy.jpg"
-                            alt="certificado Html Css Medio Udemy">
+                            alt="certificado Bootstrap Udemy">
                     </a>
                 </div>
             </div>
-
+            <p class="gridTitleStudy">IA</p>
             <div class="gridStudy">
                 <div>
-                    <img src="/assets/img/certificadoRedesCursoEmVideo.jpg" alt="certificado Redes Curso Em Video">
+                    <a href="https://hermes.dio.me/certificates/8GCOKUNU.pdf" target="_blank">
+                        <img src="/assets/img/certificadoAzureDio.jpg" alt="certificado Azure Dio">
+                    </a>
                 </div>
+            </div>
+            <p class="gridTitleStudy">Java e Linux</p>
+
+            <div class="gridStudy">
                 <div>
                     <a href="https://hermes.dio.me/certificates/75E34FAF.pdf" target="_blank">
                         <img src="/assets/img/certificadoLinuxDio.jpg" alt="certificado Linux Dio">
@@ -196,11 +209,6 @@
                 <div>
                     <a href="https://hermes.dio.me/certificates/5DQSNIYD.pdf" target="_blank">
                         <img src="/assets/img/certificadoJavaAiPowerEdDIO.jpg" alt="certificado Java Ai PowerEd DIO">
-                    </a>
-                </div>
-                <div>
-                    <a href="https://hermes.dio.me/certificates/8GCOKUNU.pdf" target="_blank">
-                        <img src="/assets/img/certificadoAzureDio.jpg" alt="certificado Azure Dio">
                     </a>
                 </div>
             </div>
