adição de curso

--- a/index.html
+++ b/index.html
@@ -183,6 +183,13 @@
                     </a>
                 </div>
                 <div>
+                    <a href="https://hermes.dio.me/certificates/cover/L0ZDYD6G.jpg"
+                        target="_blank">
+                        <img src="https://hermes.dio.me/certificates/cover/L0ZDYD6G.jpg"
+                            alt="certificado Formacao Html Developer DIO">
+                    </a>
+                </div>
+                <div>
                     <a href="https://www.udemy.com/certificate/UC-4f49e190-46c6-479e-b6da-c7f78d06712d/"
                         target="_blank">
                         <img src="/assets/img/certificadoBootstrapUdemy.jpg"
