Adição de certificados

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="/assets/css/contactMe.css">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/projects.css">
-
 </head>
 
 <body>
@@ -159,7 +158,7 @@
                         alt="certificado Logica Prog Curso Em Video">
                 </div>
             </div>
-            <p class="gridTitleStudy">Html e Css</p>
+            <p class="gridTitleStudy">Front End</p>
             <div class="gridStudy">
                 <div>
                     <a href="https://www.udemy.com/certificate/UC-3062d483-cdad-46c1-b768-291b04e9bcb7/"
@@ -171,29 +170,37 @@
                 <div>
                     <a href="https://www.udemy.com/certificate/UC-5641f70b-0ef2-42ee-a855-21dad6d9e6c9/"
                         target="_blank">
-                        <img src="/assets/img/certificadoHtmlCssMedioUdemy.jpg"
-                            alt="certificado Html Css Medio Udemy">
-                    </a>
-                </div>
-                <div>
-                    <a href="https://hermes.dio.me/certificates/XROTAIJC.pdf"
-                        target="_blank">
-                        <img src="/assets/img/certificadoFormacaoHtmlDeveloperDIO.png"
-                            alt="certificado Formacao Html Developer DIO">
-                    </a>
-                </div>
-                <div>
-                    <a href="https://hermes.dio.me/certificates/cover/L0ZDYD6G.jpg"
-                        target="_blank">
-                        <img src="https://hermes.dio.me/certificates/cover/L0ZDYD6G.jpg"
-                            alt="certificado Formacao Html Developer DIO">
+                        <img src="/assets/img/certificadoHtmlCssMedioUdemy.jpg" alt="certificado Html Css Medio Udemy">
                     </a>
                 </div>
                 <div>
                     <a href="https://www.udemy.com/certificate/UC-4f49e190-46c6-479e-b6da-c7f78d06712d/"
                         target="_blank">
-                        <img src="/assets/img/certificadoBootstrapUdemy.jpg"
-                            alt="certificado Bootstrap Udemy">
+                        <img src="/assets/img/certificadoBootstrapUdemy.jpg" alt="certificado Bootstrap Udemy">
+                    </a>
+                </div>
+                <div>
+                    <a href="https://hermes.dio.me/certificates/XROTAIJC.pdf" target="_blank">
+                        <img src="/assets/img/certificadoFormacaoHtmlDeveloperDIO.png"
+                            alt="certificado Formacao Html Developer DIO">
+                    </a>
+                </div>
+                <div>
+                    <a href="https://hermes.dio.me/certificates/L0ZDYD6G.pdf" target="_blank">
+                        <img src="/assets/img/certificadoFormacaoCssDeveloperDIO.jpg"
+                            alt="certificado Formacao Css Developer DIO">
+                    </a>
+                </div>
+                <div>
+                    <a href="https://hermes.dio.me/certificates/HNPMOWP4.pdf" target="_blank">
+                        <img src="/assets/img/certificadoFormacaoJavaScriptDeveloperDIO.jpg"
+                            alt="certificado Formacao JavaScript Developer DIO">
+                    </a>
+                </div>
+                <div>
+                    <a href="https://hermes.dio.me/certificates/RDXPEEQJ.pdf" target="_blank">
+                        <img src="/assets/img/certificadoFormacaoReactDeveloperDIO.jpg"
+                            alt="certificado Formacao React Developer DIO">
                     </a>
                 </div>
             </div>
@@ -202,6 +209,11 @@
                 <div>
                     <a href="https://hermes.dio.me/certificates/8GCOKUNU.pdf" target="_blank">
                         <img src="/assets/img/certificadoAzureDio.jpg" alt="certificado Azure Dio">
+                    </a>
+                </div>
+                <div>
+                    <a href="https://hermes.dio.me/certificates/8BLOM2NE.pdf" target="_blank">
+                        <img src="/assets/img/certificadoBootcampNexaFundamentosIAGenerativaDio.jpg" alt="certificado Fundamentos de IA Generativa Dio">
                     </a>
                 </div>
             </div>
