--- a/aboutMe.html
+++ b/aboutMe.html
@@ -34,17 +34,10 @@
         <div class="mainContent aboutMeContent">
             <div class="aboutMeText" id="text">
                 <h2>About me</h2>
-                <p>Hello! I'm Matheus Henrique, a student in Systems Analysis and Development. Currently, I'm working as
-                    an
-                    Intern at Kyros company, where I'm involved in software development.</p>
-                <p>Since early age, I discovered my passion for solving problems through technology, and ever since,
-                    I've
-                    been dedicated to learning and improving my skills. I'm enthusiastic about Java, SQL, and Git, and
-                    I'm
-                    constantly expanding my knowledge in these areas.</p>
-                <p>Additionally, I'm enhancing my skills in web development, and I'm always exploring new technologies
-                    and
-                    frameworks to broaden my skill set.</p>
+                <p>Front-End Developer with experience in Java, Spring Boot.
+                    Development of web applications using technologies such as React, Next.js, and TypeScript. I have
+                    knowledge in databases, as well as skills in HTML, CSS, and styling frameworks such as Bootstrap,
+                    Tailwind and Shadcn. Committed to delivering efficient, high-quality solutions.</p>
                 <h2>Skills</h2>
                 <p>
                     <img src="/assets/img/github.png" alt="GitHub">
